Make Maven extension JDK 8 compatible